0.11/_sources/auto_tutorials/plot_introduction.txt


.. _sphx_glr_auto_tutorials_plot_introduction.py:


.. _intro_tutorial:

Basic MEG and EEG data processing
=================================

MNE-Python reimplements most of MNE-C's (the original MNE command line utils)
functionality and offers transparent scripting.
On top of that it extends MNE-C's functionality considerably (customize events,
compute
contrasts, group statistics, time-frequency analysis, EEG-sensor space analyses
, etc.) It uses the same files as standard MNE unix commands:
no need to convert your files to a new system or database.

What you can do with MNE Python
-------------------------------

   - **Raw data visualization** to visualize recordings, can also use
     *mne_browse_raw* for extended functionality (see :ref:`ch_browse`)
   - **Epoching**: Define epochs, baseline correction, handle conditions etc.
   - **Averaging** to get Evoked data
   - **Compute SSP pojectors** to remove ECG and EOG artifacts
   - **Compute ICA** to remove artifacts or select latent sources.
   - **Maxwell filtering** to remove environmental noise.
   - **Boundary Element Modeling**: single and three-layer BEM model
     creation and solution computation.
   - **Forward modeling**: BEM computation and mesh creation
     (see :ref:`ch_forward`)
   - **Linear inverse solvers** (dSPM, sLORETA, MNE, LCMV, DICS)
   - **Sparse inverse solvers** (L1/L2 mixed norm MxNE, Gamma Map,
     Time-Frequency MxNE)
   - **Connectivity estimation** in sensor and source space
   - **Visualization of sensor and source space data**
   - **Time-frequency** analysis with Morlet wavelets (induced power,
     intertrial coherence, phase lock value) also in the source space
   - **Spectrum estimation** using multi-taper method
   - **Mixed Source Models** combining cortical and subcortical structures
   - **Dipole Fitting**
   - **Decoding** multivariate pattern analyis of M/EEG topographies
   - **Compute contrasts** between conditions, between sensors, across
     subjects etc.
   - **Non-parametric statistics** in time, space and frequency
     (including cluster-level)
   - **Scripting** (batch and parallel computing)

What you're not supposed to do with MNE Python
----------------------------------------------

    - **Brain and head surface segmentation** for use with BEM
      models -- use Freesurfer.
    - **Raw movement compensation** -- use Elekta Maxfilter™


.. note:: This package is based on the FIF file format from Neuromag. It
          can read and convert CTF, BTI/4D, KIT and various EEG formats to
          FIF.


Installation of the required materials
---------------------------------------

See :ref:`getting_started` with Python.

.. note:: The expected location for the MNE-sample data is
    my-path-to/mne-python/examples. If you downloaded data and an example asks
    you whether to download it again, make sure
    the data reside in the examples directory and you run the script from its
    current directory.

    From IPython e.g. say::

        cd examples/preprocessing


    %run plot_find_ecg_artifacts.py

From raw data to evoked data
----------------------------

.. _ipython: http://ipython.scipy.org/

Now, launch `ipython`_ (Advanced Python shell) using the QT backend which best
supported across systems::

  $ ipython --pylab -qt

First, load the mne package:


.. code-block:: python


    import mne




.. rst-class:: sphx-glr-horizontal





If you'd like to turn information status messages off:


.. code-block:: python


    mne.set_log_level('WARNING')




.. rst-class:: sphx-glr-horizontal





But it's generally a good idea to leave them on:


.. code-block:: python


    mne.set_log_level('INFO')




.. rst-class:: sphx-glr-horizontal





You can set the default level by setting the environment variable
"MNE_LOGGING_LEVEL", or by having mne-python write preferences to a file:


.. code-block:: python


    mne.set_config('MNE_LOGGING_LEVEL','WARNING')




.. rst-class:: sphx-glr-horizontal





Note that the location of the mne-python preferences file (for easier manual
editing) can be found using:


.. code-block:: python


    mne.get_config_path()




.. rst-class:: sphx-glr-horizontal





By default logging messages print to the console, but look at
mne.set_log_file() to save output to a file.

Access raw data
^^^^^^^^^^^^^^^


.. code-block:: python


    from mne.datasets import sample
    data_path = sample.data_path()
    raw_fname = data_path + '/MEG/sample/sample_audvis_filt-0-40_raw.fif'
    print(raw_fname)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    /home/jaakko/mne-testing-data/MNE-sample-data/MEG/sample/sample_audvis_filt-0-40_raw.fif


.. note:: The MNE sample dataset should be downloaded automatically but be
          patient (approx. 2GB)

Read data from file:


.. code-block:: python


    raw = mne.io.Raw(raw_fname)
    print(raw)
    print(raw.info)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Opening raw data file /home/jaakko/mne-testing-data/MNE-sample-data/MEG/sample/sample_audvis_filt-0-40_raw.fif...
        Read a total of 4 projection items:
            PCA-v1 (1 x 102)  idle
            PCA-v2 (1 x 102)  idle
            PCA-v3 (1 x 102)  idle
            Average EEG reference (1 x 59)  idle
    Current compensation grade : 0
        Range : 6443 ... 48099 =     42.953 ...   320.660 secs
    Ready.
    <RawFIF  |  n_channels x n_times : 376 x 41657>
    <Info | 25 non-empty fields
        acq_pars : unicode | 13886 items
        bads : list | MEG 2443, EEG 053
        buffer_size_sec : numpy.float64 | 10.0
        ch_names : list | MEG 0113, MEG 0112, MEG 0111, MEG 0122, MEG 0123, ...
        chs : list | 376 items (EOG: 1, EEG: 60, STIM: 9, GRAD: 204, MAG: 102)
        comps : list | 0 items
        custom_ref_applied : bool | False
        description : unicode | 49 items
        dev_head_t : 'mne.transforms.Transform | 3 items
        dig : list | 146 items
        events : list | 1 items
        experimenter : unicode | 3 items
        file_id : dict | 4 items
        filename : str | /home/jaak.../sample_audvis_filt-0-40_raw.fif
        highpass : float | 0.10000000149 Hz
        hpi_meas : list | 1 items
        hpi_results : list | 1 items
        lowpass : float | 40.0 Hz
        meas_date : numpy.ndarray | 2002-12-03 20:01:10
        meas_id : dict | 4 items
        nchan : int | 376
        proj_id : numpy.ndarray | 1 items
        proj_name : unicode | 4 items
        projs : list | PCA-v1: off, PCA-v2: off, PCA-v3: off, ...
        sfreq : float | 150.0 Hz
        acq_stim : NoneType
        ctf_head_t : NoneType
        dev_ctf_t : NoneType
        hpi_subsystem : NoneType
        line_freq : NoneType
        subject_info : NoneType
    >


Look at the channels in raw:


.. code-block:: python


    print(raw.ch_names)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    [u'MEG 0113', u'MEG 0112', u'MEG 0111', u'MEG 0122', u'MEG 0123', u'MEG 0121', u'MEG 0132', u'MEG 0133', u'MEG 0131', u'MEG 0143', u'MEG 0142', u'MEG 0141', u'MEG 0213', u'MEG 0212', u'MEG 0211', u'MEG 0222', u'MEG 0223', u'MEG 0221', u'MEG 0232', u'MEG 0233', u'MEG 0231', u'MEG 0243', u'MEG 0242', u'MEG 0241', u'MEG 0313', u'MEG 0312', u'MEG 0311', u'MEG 0322', u'MEG 0323', u'MEG 0321', u'MEG 0333', u'MEG 0332', u'MEG 0331', u'MEG 0343', u'MEG 0342', u'MEG 0341', u'MEG 0413', u'MEG 0412', u'MEG 0411', u'MEG 0422', u'MEG 0423', u'MEG 0421', u'MEG 0432', u'MEG 0433', u'MEG 0431', u'MEG 0443', u'MEG 0442', u'MEG 0441', u'MEG 0513', u'MEG 0512', u'MEG 0511', u'MEG 0523', u'MEG 0522', u'MEG 0521', u'MEG 0532', u'MEG 0533', u'MEG 0531', u'MEG 0542', u'MEG 0543', u'MEG 0541', u'MEG 0613', u'MEG 0612', u'MEG 0611', u'MEG 0622', u'MEG 0623', u'MEG 0621', u'MEG 0633', u'MEG 0632', u'MEG 0631', u'MEG 0642', u'MEG 0643', u'MEG 0641', u'MEG 0713', u'MEG 0712', u'MEG 0711', u'MEG 0723', u'MEG 0722', u'MEG 0721', u'MEG 0733', u'MEG 0732', u'MEG 0731', u'MEG 0743', u'MEG 0742', u'MEG 0741', u'MEG 0813', u'MEG 0812', u'MEG 0811', u'MEG 0822', u'MEG 0823', u'MEG 0821', u'MEG 0913', u'MEG 0912', u'MEG 0911', u'MEG 0923', u'MEG 0922', u'MEG 0921', u'MEG 0932', u'MEG 0933', u'MEG 0931', u'MEG 0942', u'MEG 0943', u'MEG 0941', u'MEG 1013', u'MEG 1012', u'MEG 1011', u'MEG 1023', u'MEG 1022', u'MEG 1021', u'MEG 1032', u'MEG 1033', u'MEG 1031', u'MEG 1043', u'MEG 1042', u'MEG 1041', u'MEG 1112', u'MEG 1113', u'MEG 1111', u'MEG 1123', u'MEG 1122', u'MEG 1121', u'MEG 1133', u'MEG 1132', u'MEG 1131', u'MEG 1142', u'MEG 1143', u'MEG 1141', u'MEG 1213', u'MEG 1212', u'MEG 1211', u'MEG 1223', u'MEG 1222', u'MEG 1221', u'MEG 1232', u'MEG 1233', u'MEG 1231', u'MEG 1243', u'MEG 1242', u'MEG 1241', u'MEG 1312', u'MEG 1313', u'MEG 1311', u'MEG 1323', u'MEG 1322', u'MEG 1321', u'MEG 1333', u'MEG 1332', u'MEG 1331', u'MEG 1342', u'MEG 1343', u'MEG 1341', u'MEG 1412', u'MEG 1413', u'MEG 1411', u'MEG 1423', u'MEG 1422', u'MEG 1421', u'MEG 1433', u'MEG 1432', u'MEG 1431', u'MEG 1442', u'MEG 1443', u'MEG 1441', u'MEG 1512', u'MEG 1513', u'MEG 1511', u'MEG 1522', u'MEG 1523', u'MEG 1521', u'MEG 1533', u'MEG 1532', u'MEG 1531', u'MEG 1543', u'MEG 1542', u'MEG 1541', u'MEG 1613', u'MEG 1612', u'MEG 1611', u'MEG 1622', u'MEG 1623', u'MEG 1621', u'MEG 1632', u'MEG 1633', u'MEG 1631', u'MEG 1643', u'MEG 1642', u'MEG 1641', u'MEG 1713', u'MEG 1712', u'MEG 1711', u'MEG 1722', u'MEG 1723', u'MEG 1721', u'MEG 1732', u'MEG 1733', u'MEG 1731', u'MEG 1743', u'MEG 1742', u'MEG 1741', u'MEG 1813', u'MEG 1812', u'MEG 1811', u'MEG 1822', u'MEG 1823', u'MEG 1821', u'MEG 1832', u'MEG 1833', u'MEG 1831', u'MEG 1843', u'MEG 1842', u'MEG 1841', u'MEG 1912', u'MEG 1913', u'MEG 1911', u'MEG 1923', u'MEG 1922', u'MEG 1921', u'MEG 1932', u'MEG 1933', u'MEG 1931', u'MEG 1943', u'MEG 1942', u'MEG 1941', u'MEG 2013', u'MEG 2012', u'MEG 2011', u'MEG 2023', u'MEG 2022', u'MEG 2021', u'MEG 2032', u'MEG 2033', u'MEG 2031', u'MEG 2042', u'MEG 2043', u'MEG 2041', u'MEG 2113', u'MEG 2112', u'MEG 2111', u'MEG 2122', u'MEG 2123', u'MEG 2121', u'MEG 2133', u'MEG 2132', u'MEG 2131', u'MEG 2143', u'MEG 2142', u'MEG 2141', u'MEG 2212', u'MEG 2213', u'MEG 2211', u'MEG 2223', u'MEG 2222', u'MEG 2221', u'MEG 2233', u'MEG 2232', u'MEG 2231', u'MEG 2242', u'MEG 2243', u'MEG 2241', u'MEG 2312', u'MEG 2313', u'MEG 2311', u'MEG 2323', u'MEG 2322', u'MEG 2321', u'MEG 2332', u'MEG 2333', u'MEG 2331', u'MEG 2343', u'MEG 2342', u'MEG 2341', u'MEG 2412', u'MEG 2413', u'MEG 2411', u'MEG 2423', u'MEG 2422', u'MEG 2421', u'MEG 2433', u'MEG 2432', u'MEG 2431', u'MEG 2442', u'MEG 2443', u'MEG 2441', u'MEG 2512', u'MEG 2513', u'MEG 2511', u'MEG 2522', u'MEG 2523', u'MEG 2521', u'MEG 2533', u'MEG 2532', u'MEG 2531', u'MEG 2543', u'MEG 2542', u'MEG 2541', u'MEG 2612', u'MEG 2613', u'MEG 2611', u'MEG 2623', u'MEG 2622', u'MEG 2621', u'MEG 2633', u'MEG 2632', u'MEG 2631', u'MEG 2642', u'MEG 2643', u'MEG 2641', u'STI 001', u'STI 002', u'STI 003', u'STI 004', u'STI 005', u'STI 006', u'STI 014', u'STI 015', u'STI 016', u'EEG 001', u'EEG 002', u'EEG 003', u'EEG 004', u'EEG 005', u'EEG 006', u'EEG 007', u'EEG 008', u'EEG 009', u'EEG 010', u'EEG 011', u'EEG 012', u'EEG 013', u'EEG 014', u'EEG 015', u'EEG 016', u'EEG 017', u'EEG 018', u'EEG 019', u'EEG 020', u'EEG 021', u'EEG 022', u'EEG 023', u'EEG 024', u'EEG 025', u'EEG 026', u'EEG 027', u'EEG 028', u'EEG 029', u'EEG 030', u'EEG 031', u'EEG 032', u'EEG 033', u'EEG 034', u'EEG 035', u'EEG 036', u'EEG 037', u'EEG 038', u'EEG 039', u'EEG 040', u'EEG 041', u'EEG 042', u'EEG 043', u'EEG 044', u'EEG 045', u'EEG 046', u'EEG 047', u'EEG 048', u'EEG 049', u'EEG 050', u'EEG 051', u'EEG 052', u'EEG 053', u'EEG 054', u'EEG 055', u'EEG 056', u'EEG 057', u'EEG 058', u'EEG 059', u'EEG 060', u'EOG 061']


Read and plot a segment of raw data


.. code-block:: python


    start, stop = raw.time_as_index([100, 115])  # 100 s to 115 s data segment
    data, times = raw[:, start:stop]
    print(data.shape)
    print(times.shape)
    data, times = raw[2:20:3, start:stop]  # access underlying data
    raw.plot()




.. image:: /auto_tutorials/images/sphx_glr_plot_introduction_001.png
    :align: center


**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 15000 ... 17249  =    100.000 ...   114.993 secs...
    [done]
    (376, 2250)
    (2250,)
    Reading 15000 ... 17249  =    100.000 ...   114.993 secs...
    [done]
    Reading 0 ... 1499  =      0.000 ...     9.993 secs...
    [done]


Save a segment of 150s of raw data (MEG only):


.. code-block:: python


    picks = mne.pick_types(raw.info, meg=True, eeg=False, stim=True,
                           exclude='bads')
    raw.save('sample_audvis_meg_raw.fif', tmin=0, tmax=150, picks=picks,
             overwrite=True)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 0 ... 0  =      0.000 ...     0.000 secs...
    [done]
    Overwriting existing file.
    Writing /home/jaakko/mne-python/tutorials/sample_audvis_meg_raw.fif
    Reading 0 ... 1499  =      0.000 ...     9.993 secs...
    [done]
    Writing ...
    Reading 1500 ... 2999  =     10.000 ...    19.993 secs...
    [done]
    Writing ...
    Reading 3000 ... 4499  =     20.000 ...    29.993 secs...
    [done]
    Writing ...
    Reading 4500 ... 5999  =     30.000 ...    39.993 secs...
    [done]
    Writing ...
    Reading 6000 ... 7499  =     40.000 ...    49.993 secs...
    [done]
    Writing ...
    Reading 7500 ... 8999  =     50.000 ...    59.993 secs...
    [done]
    Writing ...
    Reading 9000 ... 10499  =     60.000 ...    69.993 secs...
    [done]
    Writing ...
    Reading 10500 ... 11999  =     70.000 ...    79.993 secs...
    [done]
    Writing ...
    Reading 12000 ... 13499  =     80.000 ...    89.993 secs...
    [done]
    Writing ...
    Reading 13500 ... 14999  =     90.000 ...    99.993 secs...
    [done]
    Writing ...
    Reading 15000 ... 16499  =    100.000 ...   109.993 secs...
    [done]
    Writing ...
    Reading 16500 ... 17999  =    110.000 ...   119.993 secs...
    [done]
    Writing ...
    Reading 18000 ... 19499  =    120.000 ...   129.993 secs...
    [done]
    Writing ...
    Reading 19500 ... 20999  =    130.000 ...   139.993 secs...
    [done]
    Writing ...
    Reading 21000 ... 22500  =    140.000 ...   150.000 secs...
    [done]
    Writing ...
    Closing /home/jaakko/mne-python/tutorials/sample_audvis_meg_raw.fif [done]


Define and read epochs
^^^^^^^^^^^^^^^^^^^^^^

First extract events:


.. code-block:: python


    events = mne.find_events(raw, stim_channel='STI 014')
    print(events[:5])




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 0 ... 41656  =      0.000 ...   277.707 secs...
    [done]
    319 events found
    Events id: [ 1  2  3  4  5 32]
    [[6986    0    2]
     [7078    0    3]
     [7185    0    1]
     [7297    0    4]
     [7405    0    2]]


Note that, by default, we use stim_channel='STI 014'. If you have a different
system (e.g., a newer system that uses channel 'STI101' by default), you can
use the following to set the default stim channel to use for finding events:


.. code-block:: python


    mne.set_config('MNE_STIM_CHANNEL', 'STI101')




.. rst-class:: sphx-glr-horizontal





Events are stored as 2D numpy array where the first column is the time
instant and the last one is the event number. It is therefore easy to
manipulate.

Define epochs parameters:


.. code-block:: python


    event_id = dict(aud_l=1, aud_r=2)  # event trigger and conditions
    tmin = -0.2  # start of each epoch (200ms before the trigger)
    tmax = 0.5  # end of each epoch (500ms after the trigger)




.. rst-class:: sphx-glr-horizontal





Exclude some channels (original bads + 2 more):


.. code-block:: python


    raw.info['bads'] += ['MEG 2443', 'EEG 053']




.. rst-class:: sphx-glr-horizontal





The variable raw.info['bads'] is just a python list.

Pick the good channels, excluding raw.info['bads']:


.. code-block:: python


    picks = mne.pick_types(raw.info, meg=True, eeg=True, eog=True, stim=False,
                           exclude='bads')




.. rst-class:: sphx-glr-horizontal





Alternatively one can restrict to magnetometers or gradiometers with:


.. code-block:: python


    mag_picks = mne.pick_types(raw.info, meg='mag', eog=True, exclude='bads')
    grad_picks = mne.pick_types(raw.info, meg='grad', eog=True, exclude='bads')




.. rst-class:: sphx-glr-horizontal





Define the baseline period:


.. code-block:: python


    baseline = (None, 0)  # means from the first instant to t = 0




.. rst-class:: sphx-glr-horizontal





Define peak-to-peak rejection parameters for gradiometers, magnetometers and EOG:


.. code-block:: python


    reject = dict(grad=4000e-13, mag=4e-12, eog=150e-6)




.. rst-class:: sphx-glr-horizontal





Read epochs:


.. code-block:: python


    epochs = mne.Epochs(raw, events, event_id, tmin, tmax, proj=True, picks=picks,
                        baseline=baseline, preload=False, reject=reject)
    print(epochs)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    145 matching events found
    Created an SSP operator (subspace dimension = 4)
    4 projection items activated
    <Epochs  |  n_events : 145 (good & bad), tmin : -0.2 (s), tmax : 0.5 (s), baseline : (None, 0),
     'aud_l': 72, 'aud_r': 73>


Get single epochs for one condition:


.. code-block:: python


    epochs_data = epochs['aud_l'].get_data()
    print(epochs_data.shape)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 712 ... 817  =      4.747 ...     5.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1131 ... 1236  =      7.540 ...     8.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1543 ... 1648  =     10.287 ...    10.987 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1946 ... 2051  =     12.973 ...    13.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2374 ... 2479  =     15.827 ...    16.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2769 ... 2874  =     18.460 ...    19.160 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3194 ... 3299  =     21.293 ...    21.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3617 ... 3722  =     24.113 ...    24.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4047 ... 4152  =     26.980 ...    27.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4460 ... 4565  =     29.733 ...    30.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4886 ... 4991  =     32.573 ...    33.273 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 5288 ... 5393  =     35.253 ...    35.953 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5694 ... 5799  =     37.960 ...    38.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6081 ... 6186  =     40.540 ...    41.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6483 ... 6588  =     43.220 ...    43.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 6886 ... 6991  =     45.907 ...    46.607 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 7287 ... 7392  =     48.580 ...    49.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7691 ... 7796  =     51.273 ...    51.973 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8123 ... 8228  =     54.153 ...    54.853 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8543 ... 8648  =     56.953 ...    57.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8977 ... 9082  =     59.847 ...    60.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 9393 ... 9498  =     62.620 ...    63.320 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9805 ... 9910  =     65.367 ...    66.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10250 ... 10355  =     68.333 ...    69.033 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10675 ... 10780  =     71.167 ...    71.867 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 11073 ... 11178  =     73.820 ...    74.520 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11506 ... 11611  =     76.707 ...    77.407 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11937 ... 12042  =     79.580 ...    80.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12730 ... 12835  =     84.867 ...    85.567 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on MAG : [u'MEG 1711']
    Reading 13141 ... 13246  =     87.607 ...    88.307 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13558 ... 13663  =     90.387 ...    91.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13983 ... 14088  =     93.220 ...    93.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14397 ... 14502  =     95.980 ...    96.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14829 ... 14934  =     98.860 ...    99.560 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15247 ... 15352  =    101.647 ...   102.347 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 15652 ... 15757  =    104.347 ...   105.047 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16108 ... 16213  =    107.387 ...   108.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16512 ... 16617  =    110.080 ...   110.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16920 ... 17025  =    112.800 ...   113.500 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 17361 ... 17466  =    115.740 ...   116.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17810 ... 17915  =    118.733 ...   119.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18227 ... 18332  =    121.513 ...   122.213 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 18655 ... 18760  =    124.367 ...   125.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19072 ... 19177  =    127.147 ...   127.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19508 ... 19613  =    130.053 ...   130.753 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 19939 ... 20044  =    132.927 ...   133.627 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 20337 ... 20442  =    135.580 ...   136.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21141 ... 21246  =    140.940 ...   141.640 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 21570 ... 21675  =    143.800 ...   144.500 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 21985 ... 22090  =    146.567 ...   147.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22401 ... 22506  =    149.340 ...   150.040 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22822 ... 22927  =    152.147 ...   152.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23216 ... 23321  =    154.773 ...   155.473 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23630 ... 23735  =    157.533 ...   158.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24049 ... 24154  =    160.327 ...   161.027 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24477 ... 24582  =    163.180 ...   163.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24921 ... 25026  =    166.140 ...   166.840 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25326 ... 25431  =    168.840 ...   169.540 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 25724 ... 25829  =    171.493 ...   172.193 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26117 ... 26222  =    174.113 ...   174.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 26513 ... 26618  =    176.753 ...   177.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27375 ... 27480  =    182.500 ...   183.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27774 ... 27879  =    185.160 ...   185.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 28200 ... 28305  =    188.000 ...   188.700 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 28643 ... 28748  =    190.953 ...   191.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 29507 ... 29612  =    196.713 ...   197.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29905 ... 30010  =    199.367 ...   200.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30353 ... 30458  =    202.353 ...   203.053 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30778 ... 30883  =    205.187 ...   205.887 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31206 ... 31311  =    208.040 ...   208.740 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31594 ... 31699  =    210.627 ...   211.327 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 32007 ... 32112  =    213.380 ...   214.080 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    17 bad epochs dropped
    (55, 365, 106)


epochs_data is a 3D array of dimension (55 epochs, 365 channels, 106 time
instants).

Scipy supports read and write of matlab files. You can save your single
trials with:


.. code-block:: python


    from scipy import io
    io.savemat('epochs_data.mat', dict(epochs_data=epochs_data), oned_as='row')




.. rst-class:: sphx-glr-horizontal





or if you want to keep all the information about the data you can save your
epochs in a fif file:


.. code-block:: python


    epochs.save('sample-epo.fif')




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 513 ... 618  =      3.420 ...     4.120 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 712 ... 817  =      4.747 ...     5.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 932 ... 1037  =      6.213 ...     6.913 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1131 ... 1236  =      7.540 ...     8.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1328 ... 1433  =      8.853 ...     9.553 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1543 ... 1648  =     10.287 ...    10.987 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1752 ... 1857  =     11.680 ...    12.380 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1946 ... 2051  =     12.973 ...    13.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2150 ... 2255  =     14.333 ...    15.033 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 2374 ... 2479  =     15.827 ...    16.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2570 ... 2675  =     17.133 ...    17.833 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2769 ... 2874  =     18.460 ...    19.160 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2994 ... 3099  =     19.960 ...    20.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3194 ... 3299  =     21.293 ...    21.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3407 ... 3512  =     22.713 ...    23.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3617 ... 3722  =     24.113 ...    24.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3831 ... 3936  =     25.540 ...    26.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4047 ... 4152  =     26.980 ...    27.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4255 ... 4360  =     28.367 ...    29.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4460 ... 4565  =     29.733 ...    30.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4677 ... 4782  =     31.180 ...    31.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4886 ... 4991  =     32.573 ...    33.273 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 5074 ... 5179  =     33.827 ...    34.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5288 ... 5393  =     35.253 ...    35.953 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5488 ... 5593  =     36.587 ...    37.287 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5694 ... 5799  =     37.960 ...    38.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5881 ... 5986  =     39.207 ...    39.907 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6081 ... 6186  =     40.540 ...    41.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6275 ... 6380  =     41.833 ...    42.533 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6483 ... 6588  =     43.220 ...    43.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 6682 ... 6787  =     44.547 ...    45.247 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6886 ... 6991  =     45.907 ...    46.607 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 7092 ... 7197  =     47.280 ...    47.980 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7287 ... 7392  =     48.580 ...    49.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7481 ... 7586  =     49.873 ...    50.573 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7691 ... 7796  =     51.273 ...    51.973 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7915 ... 8020  =     52.767 ...    53.467 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8123 ... 8228  =     54.153 ...    54.853 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8543 ... 8648  =     56.953 ...    57.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8769 ... 8874  =     58.460 ...    59.160 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 8977 ... 9082  =     59.847 ...    60.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 9181 ... 9286  =     61.207 ...    61.907 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9393 ... 9498  =     62.620 ...    63.320 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9607 ... 9712  =     64.047 ...    64.747 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9805 ... 9910  =     65.367 ...    66.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10027 ... 10132  =     66.847 ...    67.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10250 ... 10355  =     68.333 ...    69.033 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10462 ... 10567  =     69.747 ...    70.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10675 ... 10780  =     71.167 ...    71.867 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 10873 ... 10978  =     72.487 ...    73.187 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11073 ... 11178  =     73.820 ...    74.520 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11290 ... 11395  =     75.267 ...    75.967 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11506 ... 11611  =     76.707 ...    77.407 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11714 ... 11819  =     78.093 ...    78.793 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11937 ... 12042  =     79.580 ...    80.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12142 ... 12247  =     80.947 ...    81.647 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12528 ... 12633  =     83.520 ...    84.220 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12730 ... 12835  =     84.867 ...    85.567 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on MAG : [u'MEG 1711']
    Reading 12927 ... 13032  =     86.180 ...    86.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13141 ... 13246  =     87.607 ...    88.307 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13346 ... 13451  =     88.973 ...    89.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13558 ... 13663  =     90.387 ...    91.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13760 ... 13865  =     91.733 ...    92.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13983 ... 14088  =     93.220 ...    93.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14184 ... 14289  =     94.560 ...    95.260 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14397 ... 14502  =     95.980 ...    96.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14616 ... 14721  =     97.440 ...    98.140 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14829 ... 14934  =     98.860 ...    99.560 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15031 ... 15136  =    100.207 ...   100.907 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 15247 ... 15352  =    101.647 ...   102.347 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 15435 ... 15540  =    102.900 ...   103.600 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15652 ... 15757  =    104.347 ...   105.047 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15877 ... 15982  =    105.847 ...   106.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16108 ... 16213  =    107.387 ...   108.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16301 ... 16406  =    108.673 ...   109.373 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16512 ... 16617  =    110.080 ...   110.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16920 ... 17025  =    112.800 ...   113.500 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 17137 ... 17242  =    114.247 ...   114.947 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17361 ... 17466  =    115.740 ...   116.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17584 ... 17689  =    117.227 ...   117.927 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on MAG : [u'MEG 1711']
    Reading 17810 ... 17915  =    118.733 ...   119.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18029 ... 18134  =    120.193 ...   120.893 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18227 ... 18332  =    121.513 ...   122.213 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 18449 ... 18554  =    122.993 ...   123.693 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 18655 ... 18760  =    124.367 ...   125.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18867 ... 18972  =    125.780 ...   126.480 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19072 ... 19177  =    127.147 ...   127.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19298 ... 19403  =    128.653 ...   129.353 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19508 ... 19613  =    130.053 ...   130.753 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 19727 ... 19832  =    131.513 ...   132.213 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19939 ... 20044  =    132.927 ...   133.627 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 20154 ... 20259  =    134.360 ...   135.060 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 20337 ... 20442  =    135.580 ...   136.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 20541 ... 20646  =    136.940 ...   137.640 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 20933 ... 21038  =    139.553 ...   140.253 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 21141 ... 21246  =    140.940 ...   141.640 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 21358 ... 21463  =    142.387 ...   143.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 21570 ... 21675  =    143.800 ...   144.500 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 21782 ... 21887  =    145.213 ...   145.913 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21985 ... 22090  =    146.567 ...   147.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22182 ... 22287  =    147.880 ...   148.580 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22401 ... 22506  =    149.340 ...   150.040 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22628 ... 22733  =    150.853 ...   151.553 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22822 ... 22927  =    152.147 ...   152.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23216 ... 23321  =    154.773 ...   155.473 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23420 ... 23525  =    156.133 ...   156.833 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23630 ... 23735  =    157.533 ...   158.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23843 ... 23948  =    158.953 ...   159.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24049 ... 24154  =    160.327 ...   161.027 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24261 ... 24366  =    161.740 ...   162.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24477 ... 24582  =    163.180 ...   163.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24702 ... 24807  =    164.680 ...   165.380 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24921 ... 25026  =    166.140 ...   166.840 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25130 ... 25235  =    167.533 ...   168.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25326 ... 25431  =    168.840 ...   169.540 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 25512 ... 25617  =    170.080 ...   170.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25724 ... 25829  =    171.493 ...   172.193 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25926 ... 26031  =    172.840 ...   173.540 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26117 ... 26222  =    174.113 ...   174.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 26306 ... 26411  =    175.373 ...   176.073 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 26513 ... 26618  =    176.753 ...   177.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26736 ... 26841  =    178.240 ...   178.940 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27174 ... 27279  =    181.160 ...   181.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27375 ... 27480  =    182.500 ...   183.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27563 ... 27668  =    183.753 ...   184.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27774 ... 27879  =    185.160 ...   185.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27989 ... 28094  =    186.593 ...   187.293 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 28200 ... 28305  =    188.000 ...   188.700 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 28425 ... 28530  =    189.500 ...   190.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 28643 ... 28748  =    190.953 ...   191.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 28880 ... 28985  =    192.533 ...   193.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29294 ... 29399  =    195.293 ...   195.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29507 ... 29612  =    196.713 ...   197.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29718 ... 29823  =    198.120 ...   198.820 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29905 ... 30010  =    199.367 ...   200.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30125 ... 30230  =    200.833 ...   201.533 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30353 ... 30458  =    202.353 ...   203.053 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30564 ... 30669  =    203.760 ...   204.460 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30778 ... 30883  =    205.187 ...   205.887 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30985 ... 31090  =    206.567 ...   207.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31206 ... 31311  =    208.040 ...   208.740 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31394 ... 31499  =    209.293 ...   209.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31594 ... 31699  =    210.627 ...   211.327 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31790 ... 31895  =    211.933 ...   212.633 secs...
    [done]
    Applying baseline correction ... (mode: mean)
        Rejecting  epoch based on EOG : [u'EOG 061']
    Reading 32007 ... 32112  =    213.380 ...   214.080 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    29 bad epochs dropped
    Reading 712 ... 817  =      4.747 ...     5.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 712 ... 817  =      4.747 ...     5.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 932 ... 1037  =      6.213 ...     6.913 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1131 ... 1236  =      7.540 ...     8.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1328 ... 1433  =      8.853 ...     9.553 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1543 ... 1648  =     10.287 ...    10.987 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1752 ... 1857  =     11.680 ...    12.380 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1946 ... 2051  =     12.973 ...    13.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2374 ... 2479  =     15.827 ...    16.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2570 ... 2675  =     17.133 ...    17.833 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2769 ... 2874  =     18.460 ...    19.160 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2994 ... 3099  =     19.960 ...    20.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3194 ... 3299  =     21.293 ...    21.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3407 ... 3512  =     22.713 ...    23.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3617 ... 3722  =     24.113 ...    24.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3831 ... 3936  =     25.540 ...    26.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4047 ... 4152  =     26.980 ...    27.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4255 ... 4360  =     28.367 ...    29.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4460 ... 4565  =     29.733 ...    30.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4677 ... 4782  =     31.180 ...    31.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5074 ... 5179  =     33.827 ...    34.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5288 ... 5393  =     35.253 ...    35.953 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5488 ... 5593  =     36.587 ...    37.287 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5694 ... 5799  =     37.960 ...    38.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5881 ... 5986  =     39.207 ...    39.907 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6081 ... 6186  =     40.540 ...    41.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6275 ... 6380  =     41.833 ...    42.533 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6682 ... 6787  =     44.547 ...    45.247 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7092 ... 7197  =     47.280 ...    47.980 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7287 ... 7392  =     48.580 ...    49.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7481 ... 7586  =     49.873 ...    50.573 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7691 ... 7796  =     51.273 ...    51.973 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7915 ... 8020  =     52.767 ...    53.467 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8123 ... 8228  =     54.153 ...    54.853 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8543 ... 8648  =     56.953 ...    57.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9181 ... 9286  =     61.207 ...    61.907 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9393 ... 9498  =     62.620 ...    63.320 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9607 ... 9712  =     64.047 ...    64.747 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9805 ... 9910  =     65.367 ...    66.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10027 ... 10132  =     66.847 ...    67.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10250 ... 10355  =     68.333 ...    69.033 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10462 ... 10567  =     69.747 ...    70.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10873 ... 10978  =     72.487 ...    73.187 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11073 ... 11178  =     73.820 ...    74.520 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11290 ... 11395  =     75.267 ...    75.967 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11506 ... 11611  =     76.707 ...    77.407 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11714 ... 11819  =     78.093 ...    78.793 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11937 ... 12042  =     79.580 ...    80.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12142 ... 12247  =     80.947 ...    81.647 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12528 ... 12633  =     83.520 ...    84.220 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12927 ... 13032  =     86.180 ...    86.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13141 ... 13246  =     87.607 ...    88.307 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13346 ... 13451  =     88.973 ...    89.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13558 ... 13663  =     90.387 ...    91.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13760 ... 13865  =     91.733 ...    92.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13983 ... 14088  =     93.220 ...    93.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14184 ... 14289  =     94.560 ...    95.260 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14397 ... 14502  =     95.980 ...    96.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14616 ... 14721  =     97.440 ...    98.140 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14829 ... 14934  =     98.860 ...    99.560 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15435 ... 15540  =    102.900 ...   103.600 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15652 ... 15757  =    104.347 ...   105.047 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15877 ... 15982  =    105.847 ...   106.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16108 ... 16213  =    107.387 ...   108.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16301 ... 16406  =    108.673 ...   109.373 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16512 ... 16617  =    110.080 ...   110.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17137 ... 17242  =    114.247 ...   114.947 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17361 ... 17466  =    115.740 ...   116.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17810 ... 17915  =    118.733 ...   119.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18029 ... 18134  =    120.193 ...   120.893 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18655 ... 18760  =    124.367 ...   125.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18867 ... 18972  =    125.780 ...   126.480 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19072 ... 19177  =    127.147 ...   127.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19298 ... 19403  =    128.653 ...   129.353 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19727 ... 19832  =    131.513 ...   132.213 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 20337 ... 20442  =    135.580 ...   136.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21782 ... 21887  =    145.213 ...   145.913 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21985 ... 22090  =    146.567 ...   147.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22182 ... 22287  =    147.880 ...   148.580 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22401 ... 22506  =    149.340 ...   150.040 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22628 ... 22733  =    150.853 ...   151.553 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22822 ... 22927  =    152.147 ...   152.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23216 ... 23321  =    154.773 ...   155.473 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23420 ... 23525  =    156.133 ...   156.833 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23630 ... 23735  =    157.533 ...   158.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23843 ... 23948  =    158.953 ...   159.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24049 ... 24154  =    160.327 ...   161.027 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24261 ... 24366  =    161.740 ...   162.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24477 ... 24582  =    163.180 ...   163.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24702 ... 24807  =    164.680 ...   165.380 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24921 ... 25026  =    166.140 ...   166.840 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25130 ... 25235  =    167.533 ...   168.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25512 ... 25617  =    170.080 ...   170.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25724 ... 25829  =    171.493 ...   172.193 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25926 ... 26031  =    172.840 ...   173.540 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26513 ... 26618  =    176.753 ...   177.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26736 ... 26841  =    178.240 ...   178.940 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27174 ... 27279  =    181.160 ...   181.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27375 ... 27480  =    182.500 ...   183.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27563 ... 27668  =    183.753 ...   184.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27774 ... 27879  =    185.160 ...   185.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27989 ... 28094  =    186.593 ...   187.293 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 28425 ... 28530  =    189.500 ...   190.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 28880 ... 28985  =    192.533 ...   193.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29294 ... 29399  =    195.293 ...   195.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29507 ... 29612  =    196.713 ...   197.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29718 ... 29823  =    198.120 ...   198.820 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29905 ... 30010  =    199.367 ...   200.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30125 ... 30230  =    200.833 ...   201.533 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30353 ... 30458  =    202.353 ...   203.053 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30564 ... 30669  =    203.760 ...   204.460 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30778 ... 30883  =    205.187 ...   205.887 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30985 ... 31090  =    206.567 ...   207.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31206 ... 31311  =    208.040 ...   208.740 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31394 ... 31499  =    209.293 ...   209.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31594 ... 31699  =    210.627 ...   211.327 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 32007 ... 32112  =    213.380 ...   214.080 secs...
    [done]
    Applying baseline correction ... (mode: mean)


and read them later with:


.. code-block:: python


    saved_epochs = mne.read_epochs('sample-epo.fif')




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading sample-epo.fif ...
        Read a total of 4 projection items:
            PCA-v1 (1 x 102) active
            PCA-v2 (1 x 102) active
            PCA-v3 (1 x 102) active
            Average EEG reference (1 x 59) active
        Found the data of interest:
            t =    -200.00 ...     500.00 ms (None)
            0 CTF compensation matrices available
    116 matching events found
    Created an SSP operator (subspace dimension = 4)
    116 matching events found
    Created an SSP operator (subspace dimension = 4)
    4 projection items activated


Compute evoked responses for auditory responses by averaging and plot it:


.. code-block:: python


    evoked = epochs['aud_l'].average()
    print(evoked)
    evoked.plot()




.. image:: /auto_tutorials/images/sphx_glr_plot_introduction_002.png
    :align: center


**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 712 ... 817  =      4.747 ...     5.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1131 ... 1236  =      7.540 ...     8.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1543 ... 1648  =     10.287 ...    10.987 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1946 ... 2051  =     12.973 ...    13.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2374 ... 2479  =     15.827 ...    16.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2769 ... 2874  =     18.460 ...    19.160 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3194 ... 3299  =     21.293 ...    21.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3617 ... 3722  =     24.113 ...    24.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4047 ... 4152  =     26.980 ...    27.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4460 ... 4565  =     29.733 ...    30.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5288 ... 5393  =     35.253 ...    35.953 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5694 ... 5799  =     37.960 ...    38.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6081 ... 6186  =     40.540 ...    41.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7287 ... 7392  =     48.580 ...    49.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7691 ... 7796  =     51.273 ...    51.973 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8123 ... 8228  =     54.153 ...    54.853 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8543 ... 8648  =     56.953 ...    57.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9393 ... 9498  =     62.620 ...    63.320 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9805 ... 9910  =     65.367 ...    66.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10250 ... 10355  =     68.333 ...    69.033 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11073 ... 11178  =     73.820 ...    74.520 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11506 ... 11611  =     76.707 ...    77.407 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11937 ... 12042  =     79.580 ...    80.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13141 ... 13246  =     87.607 ...    88.307 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13558 ... 13663  =     90.387 ...    91.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13983 ... 14088  =     93.220 ...    93.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14397 ... 14502  =     95.980 ...    96.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14829 ... 14934  =     98.860 ...    99.560 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15652 ... 15757  =    104.347 ...   105.047 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16108 ... 16213  =    107.387 ...   108.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16512 ... 16617  =    110.080 ...   110.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17361 ... 17466  =    115.740 ...   116.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17810 ... 17915  =    118.733 ...   119.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18655 ... 18760  =    124.367 ...   125.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19072 ... 19177  =    127.147 ...   127.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 20337 ... 20442  =    135.580 ...   136.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21985 ... 22090  =    146.567 ...   147.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22401 ... 22506  =    149.340 ...   150.040 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22822 ... 22927  =    152.147 ...   152.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23216 ... 23321  =    154.773 ...   155.473 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23630 ... 23735  =    157.533 ...   158.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24049 ... 24154  =    160.327 ...   161.027 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24477 ... 24582  =    163.180 ...   163.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24921 ... 25026  =    166.140 ...   166.840 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25724 ... 25829  =    171.493 ...   172.193 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26513 ... 26618  =    176.753 ...   177.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27375 ... 27480  =    182.500 ...   183.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27774 ... 27879  =    185.160 ...   185.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29507 ... 29612  =    196.713 ...   197.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29905 ... 30010  =    199.367 ...   200.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30353 ... 30458  =    202.353 ...   203.053 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30778 ... 30883  =    205.187 ...   205.887 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31206 ... 31311  =    208.040 ...   208.740 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31594 ... 31699  =    210.627 ...   211.327 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 32007 ... 32112  =    213.380 ...   214.080 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    <Evoked  |  comment : 'aud_l', kind : average, time : [-0.200000, 0.500000], n_epochs : 55, n_channels x n_times : 364 x 106>


.. topic:: Exercise

  1. Extract the max value of each epoch


.. code-block:: python


    max_in_each_epoch = [e.max() for e in epochs['aud_l']] # doctest:+ELLIPSIS
    print(max_in_each_epoch[:4]) # doctest:+ELLIPSIS




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 712 ... 817  =      4.747 ...     5.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1131 ... 1236  =      7.540 ...     8.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1543 ... 1648  =     10.287 ...    10.987 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1946 ... 2051  =     12.973 ...    13.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2374 ... 2479  =     15.827 ...    16.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2769 ... 2874  =     18.460 ...    19.160 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3194 ... 3299  =     21.293 ...    21.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3617 ... 3722  =     24.113 ...    24.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4047 ... 4152  =     26.980 ...    27.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4460 ... 4565  =     29.733 ...    30.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5288 ... 5393  =     35.253 ...    35.953 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5694 ... 5799  =     37.960 ...    38.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6081 ... 6186  =     40.540 ...    41.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7287 ... 7392  =     48.580 ...    49.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7691 ... 7796  =     51.273 ...    51.973 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8123 ... 8228  =     54.153 ...    54.853 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8543 ... 8648  =     56.953 ...    57.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9393 ... 9498  =     62.620 ...    63.320 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9805 ... 9910  =     65.367 ...    66.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10250 ... 10355  =     68.333 ...    69.033 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11073 ... 11178  =     73.820 ...    74.520 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11506 ... 11611  =     76.707 ...    77.407 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11937 ... 12042  =     79.580 ...    80.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13141 ... 13246  =     87.607 ...    88.307 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13558 ... 13663  =     90.387 ...    91.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13983 ... 14088  =     93.220 ...    93.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14397 ... 14502  =     95.980 ...    96.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14829 ... 14934  =     98.860 ...    99.560 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15652 ... 15757  =    104.347 ...   105.047 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16108 ... 16213  =    107.387 ...   108.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16512 ... 16617  =    110.080 ...   110.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17361 ... 17466  =    115.740 ...   116.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17810 ... 17915  =    118.733 ...   119.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18655 ... 18760  =    124.367 ...   125.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19072 ... 19177  =    127.147 ...   127.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 20337 ... 20442  =    135.580 ...   136.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21985 ... 22090  =    146.567 ...   147.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22401 ... 22506  =    149.340 ...   150.040 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22822 ... 22927  =    152.147 ...   152.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23216 ... 23321  =    154.773 ...   155.473 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23630 ... 23735  =    157.533 ...   158.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24049 ... 24154  =    160.327 ...   161.027 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24477 ... 24582  =    163.180 ...   163.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24921 ... 25026  =    166.140 ...   166.840 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25724 ... 25829  =    171.493 ...   172.193 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26513 ... 26618  =    176.753 ...   177.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27375 ... 27480  =    182.500 ...   183.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27774 ... 27879  =    185.160 ...   185.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29507 ... 29612  =    196.713 ...   197.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29905 ... 30010  =    199.367 ...   200.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30353 ... 30458  =    202.353 ...   203.053 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30778 ... 30883  =    205.187 ...   205.887 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31206 ... 31311  =    208.040 ...   208.740 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31594 ... 31699  =    210.627 ...   211.327 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 32007 ... 32112  =    213.380 ...   214.080 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    [1.954563193230623e-05, 1.7786581358272427e-05, 1.9165363008060159e-05, 2.0753839885944087e-05]


It is also possible to read evoked data stored in a fif file:


.. code-block:: python


    evoked_fname = data_path + '/MEG/sample/sample_audvis-ave.fif'
    evoked1 = mne.read_evokeds(
        evoked_fname, condition='Left Auditory', baseline=(None, 0), proj=True)



../tutorials/plot_introduction.py is not compiling:



Or another one stored in the same file:


.. code-block:: python


    evoked2 = mne.read_evokeds(
        evoked_fname, condition='Right Auditory', baseline=(None, 0), proj=True)



../tutorials/plot_introduction.py is not compiling:



Compute a contrast:


.. code-block:: python


    contrast = evoked1 - evoked2
    print(contrast)



../tutorials/plot_introduction.py is not compiling:



Time-Frequency: Induced power and inter trial coherence
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Define parameters:


.. code-block:: python


    import numpy as np
    n_cycles = 2  # number of cycles in Morlet wavelet
    freqs = np.arange(7, 30, 3)  # frequencies of interest




.. rst-class:: sphx-glr-horizontal





Compute induced power and phase-locking values and plot gradiometers:


.. code-block:: python


    from mne.time_frequency import tfr_morlet
    power, itc = tfr_morlet(epochs, freqs=freqs, n_cycles=n_cycles,
                            return_itc=True, decim=3, n_jobs=1)
    # power.plot()




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading 712 ... 817  =      4.747 ...     5.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 932 ... 1037  =      6.213 ...     6.913 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1131 ... 1236  =      7.540 ...     8.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1328 ... 1433  =      8.853 ...     9.553 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1543 ... 1648  =     10.287 ...    10.987 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1752 ... 1857  =     11.680 ...    12.380 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 1946 ... 2051  =     12.973 ...    13.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2374 ... 2479  =     15.827 ...    16.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2570 ... 2675  =     17.133 ...    17.833 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2769 ... 2874  =     18.460 ...    19.160 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 2994 ... 3099  =     19.960 ...    20.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3194 ... 3299  =     21.293 ...    21.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3407 ... 3512  =     22.713 ...    23.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3617 ... 3722  =     24.113 ...    24.813 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 3831 ... 3936  =     25.540 ...    26.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4047 ... 4152  =     26.980 ...    27.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4255 ... 4360  =     28.367 ...    29.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4460 ... 4565  =     29.733 ...    30.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 4677 ... 4782  =     31.180 ...    31.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5074 ... 5179  =     33.827 ...    34.527 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5288 ... 5393  =     35.253 ...    35.953 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5488 ... 5593  =     36.587 ...    37.287 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5694 ... 5799  =     37.960 ...    38.660 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 5881 ... 5986  =     39.207 ...    39.907 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6081 ... 6186  =     40.540 ...    41.240 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6275 ... 6380  =     41.833 ...    42.533 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 6682 ... 6787  =     44.547 ...    45.247 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7092 ... 7197  =     47.280 ...    47.980 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7287 ... 7392  =     48.580 ...    49.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7481 ... 7586  =     49.873 ...    50.573 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7691 ... 7796  =     51.273 ...    51.973 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 7915 ... 8020  =     52.767 ...    53.467 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8123 ... 8228  =     54.153 ...    54.853 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 8543 ... 8648  =     56.953 ...    57.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9181 ... 9286  =     61.207 ...    61.907 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9393 ... 9498  =     62.620 ...    63.320 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9607 ... 9712  =     64.047 ...    64.747 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 9805 ... 9910  =     65.367 ...    66.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10027 ... 10132  =     66.847 ...    67.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10250 ... 10355  =     68.333 ...    69.033 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10462 ... 10567  =     69.747 ...    70.447 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 10873 ... 10978  =     72.487 ...    73.187 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11073 ... 11178  =     73.820 ...    74.520 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11290 ... 11395  =     75.267 ...    75.967 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11506 ... 11611  =     76.707 ...    77.407 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11714 ... 11819  =     78.093 ...    78.793 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 11937 ... 12042  =     79.580 ...    80.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12142 ... 12247  =     80.947 ...    81.647 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12528 ... 12633  =     83.520 ...    84.220 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 12927 ... 13032  =     86.180 ...    86.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13141 ... 13246  =     87.607 ...    88.307 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13346 ... 13451  =     88.973 ...    89.673 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13558 ... 13663  =     90.387 ...    91.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13760 ... 13865  =     91.733 ...    92.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 13983 ... 14088  =     93.220 ...    93.920 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14184 ... 14289  =     94.560 ...    95.260 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14397 ... 14502  =     95.980 ...    96.680 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14616 ... 14721  =     97.440 ...    98.140 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 14829 ... 14934  =     98.860 ...    99.560 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15435 ... 15540  =    102.900 ...   103.600 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15652 ... 15757  =    104.347 ...   105.047 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 15877 ... 15982  =    105.847 ...   106.547 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16108 ... 16213  =    107.387 ...   108.087 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16301 ... 16406  =    108.673 ...   109.373 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 16512 ... 16617  =    110.080 ...   110.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17137 ... 17242  =    114.247 ...   114.947 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17361 ... 17466  =    115.740 ...   116.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 17810 ... 17915  =    118.733 ...   119.433 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18029 ... 18134  =    120.193 ...   120.893 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18655 ... 18760  =    124.367 ...   125.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 18867 ... 18972  =    125.780 ...   126.480 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19072 ... 19177  =    127.147 ...   127.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19298 ... 19403  =    128.653 ...   129.353 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 19727 ... 19832  =    131.513 ...   132.213 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 20337 ... 20442  =    135.580 ...   136.280 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21782 ... 21887  =    145.213 ...   145.913 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 21985 ... 22090  =    146.567 ...   147.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22182 ... 22287  =    147.880 ...   148.580 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22401 ... 22506  =    149.340 ...   150.040 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22628 ... 22733  =    150.853 ...   151.553 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 22822 ... 22927  =    152.147 ...   152.847 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23216 ... 23321  =    154.773 ...   155.473 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23420 ... 23525  =    156.133 ...   156.833 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23630 ... 23735  =    157.533 ...   158.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 23843 ... 23948  =    158.953 ...   159.653 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24049 ... 24154  =    160.327 ...   161.027 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24261 ... 24366  =    161.740 ...   162.440 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24477 ... 24582  =    163.180 ...   163.880 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24702 ... 24807  =    164.680 ...   165.380 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 24921 ... 25026  =    166.140 ...   166.840 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25130 ... 25235  =    167.533 ...   168.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25512 ... 25617  =    170.080 ...   170.780 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25724 ... 25829  =    171.493 ...   172.193 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 25926 ... 26031  =    172.840 ...   173.540 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26513 ... 26618  =    176.753 ...   177.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 26736 ... 26841  =    178.240 ...   178.940 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27174 ... 27279  =    181.160 ...   181.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27375 ... 27480  =    182.500 ...   183.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27563 ... 27668  =    183.753 ...   184.453 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27774 ... 27879  =    185.160 ...   185.860 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 27989 ... 28094  =    186.593 ...   187.293 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 28425 ... 28530  =    189.500 ...   190.200 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 28880 ... 28985  =    192.533 ...   193.233 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29294 ... 29399  =    195.293 ...   195.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29507 ... 29612  =    196.713 ...   197.413 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29718 ... 29823  =    198.120 ...   198.820 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 29905 ... 30010  =    199.367 ...   200.067 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30125 ... 30230  =    200.833 ...   201.533 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30353 ... 30458  =    202.353 ...   203.053 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30564 ... 30669  =    203.760 ...   204.460 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30778 ... 30883  =    205.187 ...   205.887 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 30985 ... 31090  =    206.567 ...   207.267 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31206 ... 31311  =    208.040 ...   208.740 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31394 ... 31499  =    209.293 ...   209.993 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 31594 ... 31699  =    210.627 ...   211.327 secs...
    [done]
    Applying baseline correction ... (mode: mean)
    Reading 32007 ... 32112  =    213.380 ...   214.080 secs...
    [done]
    Applying baseline correction ... (mode: mean)


Inverse modeling: MNE and dSPM on evoked and raw data
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Import the required functions:


.. code-block:: python


    from mne.minimum_norm import apply_inverse, read_inverse_operator




.. rst-class:: sphx-glr-horizontal





Read the inverse operator:


.. code-block:: python


    fname_inv = data_path + '/MEG/sample/sample_audvis-meg-oct-6-meg-inv.fif'
    inverse_operator = read_inverse_operator(fname_inv)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Reading inverse operator decomposition from /home/jaakko/mne-testing-data/MNE-sample-data/MEG/sample/sample_audvis-meg-oct-6-meg-inv.fif...
        Reading inverse operator info...
        [done]
        Reading inverse operator decomposition...
        [done]
        305 x 305 full covariance (kind = 1) found.
        Read a total of 4 projection items:
            PCA-v1 (1 x 102) active
            PCA-v2 (1 x 102) active
            PCA-v3 (1 x 102) active
            Average EEG reference (1 x 60) active
        Noise covariance matrix read.
        22494 x 22494 diagonal covariance (kind = 2) found.
        Source covariance matrix read.
        22494 x 22494 diagonal covariance (kind = 6) found.
        Orientation priors read.
        22494 x 22494 diagonal covariance (kind = 5) found.
        Depth priors read.
        Did not find the desired covariance matrix (kind = 3)
        Reading a source space...
        Computing patch statistics...
        Patch information added...
        Distance information added...
        [done]
        Reading a source space...
        Computing patch statistics...
        Patch information added...
        Distance information added...
        [done]
        2 source spaces read
        Read a total of 4 projection items:
            PCA-v1 (1 x 102) active
            PCA-v2 (1 x 102) active
            PCA-v3 (1 x 102) active
            Average EEG reference (1 x 60) active
        Source spaces transformed to the inverse solution coordinate frame


Define the inverse parameters:


.. code-block:: python


    snr = 3.0
    lambda2 = 1.0 / snr ** 2
    method = "dSPM"




.. rst-class:: sphx-glr-horizontal





Compute the inverse solution:


.. code-block:: python


    stc = apply_inverse(evoked, inverse_operator, lambda2, method)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Preparing the inverse operator for use...
        Scaled noise and source covariance from nave = 1 to nave = 55
        Created the regularized inverter
        Created an SSP operator (subspace dimension = 3)
        Created the whitener using a full noise covariance matrix (3 small eigenvalues omitted)
        Computing noise-normalization factors (dSPM)...
    [done]
    Picked 305 channels from the data
    Computing inverse...
    (eigenleads need to be weighted)...
    combining the current components...
    (dSPM)...
    [done]


Save the source time courses to disk:


.. code-block:: python


    stc.save('mne_dSPM_inverse')




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Writing STC to disk...
    [done]


Now, let's compute dSPM on a raw file within a label:


.. code-block:: python


    fname_label = data_path + '/MEG/sample/labels/Aud-lh.label'
    label = mne.read_label(fname_label)




.. rst-class:: sphx-glr-horizontal





Compute inverse solution during the first 15s:


.. code-block:: python


    from mne.minimum_norm import apply_inverse_raw
    start, stop = raw.time_as_index([0, 15])  # read the first 15s of data
    stc = apply_inverse_raw(raw, inverse_operator, lambda2, method, label,
                            start, stop)




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Preparing the inverse operator for use...
        Scaled noise and source covariance from nave = 1 to nave = 1
        Created the regularized inverter
        Created an SSP operator (subspace dimension = 3)
        Created the whitener using a full noise covariance matrix (3 small eigenvalues omitted)
        Computing noise-normalization factors (dSPM)...
    [done]
    Picked 305 channels from the data
    Computing inverse...
    Reading 0 ... 2249  =      0.000 ...    14.993 secs...
    [done]
    (eigenleads need to be weighted)...
    combining the current components...
    [done]


Save result in stc files:


.. code-block:: python


    stc.save('mne_dSPM_raw_inverse_Aud')




.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Writing STC to disk...
    [done]


What else can you do?
^^^^^^^^^^^^^^^^^^^^^

    - detect heart beat QRS component
    - detect eye blinks and EOG artifacts
    - compute SSP projections to remove ECG or EOG artifacts
    - compute Independent Component Analysis (ICA) to remove artifacts or
      select latent sources
    - estimate noise covariance matrix from Raw and Epochs
    - visualize cross-trial response dynamics using epochs images
    - compute forward solutions
    - estimate power in the source space
    - estimate connectivity in sensor and source space
    - morph stc from one brain to another for group studies
    - compute mass univariate statistics base on custom contrasts
    - visualize source estimates
    - export raw, epochs, and evoked data to other python data analysis
      libraries e.g. pandas
    - and many more things ...

Want to know more ?
^^^^^^^^^^^^^^^^^^^

Browse :ref:`examples-index` gallery.


.. code-block:: python


    print("Done!")



.. rst-class:: sphx-glr-horizontal



**Script output**:

.. rst-class:: sphx-glr-script-out

  ::

    Done!


**Total running time of the script:**
(9 minutes 31.030 seconds)



**Download Python source code:** :download:`plot_introduction.py <plot_introduction.py>`
